--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^47.0.5"
   }
 }
