--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "openai": "^5.20.1",
     "path": "latest",
     "react": "^19",
     "react-day-picker": "latest",
