Fix critical build errors: Globe imports, missing resend package, useOrganization context issues
- Fixed duplicate CheckCircle import in marketplace
- Added missing resend package for email service
- Fixed Globe import missing in OrganizationContext
- Removed lazy loading that was causing bundling issues
- Fixed useOrganization context errors in public pages (community, mobile)
- Updated AI service to check both server and client environment variables
- Removed console warnings for missing API keys

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-is": "^19.1.1",
     "react-resizable-panels": "latest",
     "recharts": "latest",
+    "resend": "^6.0.3",
     "sonner": "latest",
     "stripe": "latest",
     "svelte": "latest",
