Fix dashboard 404 error by removing invalid redirects
🐛 Bug Fixes:
- Removed redirect from /dashboard to /dashboard/overview in vercel.json
- Removed redirect from /dashboard to /dashboard/overview in next.config.staging.js
- Dashboard now correctly loads at /dashboard (not /dashboard/overview)

🔧 Technical Details:
- The /dashboard/overview page doesn't exist
- Main dashboard is at /dashboard/page.tsx
- Redirects were causing 404 errors after organization selection
- Users can now access dashboard without redirect issues

--- a/vercel.json
+++ b/vercel.json
@@ -63,13 +63,7 @@
       ]
     }
   ],
-  "redirects": [
-    {
-      "source": "/dashboard",
-      "destination": "/dashboard/overview",
-      "permanent": false
-    }
-  ],
+  "redirects": [],
   "rewrites": [
     {
       "source": "/health",
